<resources>
    <string name="app_name">Pizza Dream Admin</string>
    <string name="title_activity_home">HomeActivity</string>
    <string name="title_home">Home</string>
    <string name="title_dashboard">Dashboard</string>
    <string name="title_notifications">Notifications</string>
    <string name="menu_home">Меню</string>
    <string name="menu_pizzerias">Піцерії</string>
    <string name="menu_orders">Замовлення</string>
    <string name="menu_news">Новини</string>
    <string name="menu_vacancies">Вакансії</string>
    <string name="google_sign_in">Увійти через Google</string>
    <string name="email_sign_in">Увійти</string>
    <string name="sign_in_text">Вхід</string>
    <string name="register_text">Реєстрація</string>
    <string name="continue_text">Далі</string>
    <string name="first_name">Ім\'я</string>
    <string name="last_name">Прізвище</string>
    <string name="email">Електронна адреса</string>
    <string name="password">Пароль</string>
    <string name="forgot_password">Забули пароль</string>
    <string name="dont_have_account">Не маєте облікового запису? Зареєструватися</string>
    <string name="or">або</string>
    <string name="logo">Pizza\n Dream</string>
    <string name="register_btn">Зареєструватись</string>
    <string name="have_account">Вже маєте обліковий запис? Увійти</string>
    <string name="cansel">Скасувати</string>
    <string name="send">Надіслати</string>
    <string name="menu_profile">Профіль</string>
    <string name="sign_out">Вихід</string>
    <string name="menu_edit_profile">Редагувати профіль</string>
    <string name="edit_avatar">Змінити аватар</string>
    <string name="phone">Телефон</string>
    <string name="save">Зберегти</string>
    <string name="add_admin">Призначення адміністраторів</string>
    <string name="appoint_admin">Призначити</string>
    <string name="details">Деталі</string>
    <string name="map">Карта</string>
    <string name="list">Список</string>
    <string name="google_maps_key">AIzaSyD9GQK9FfCjUWWWJdNiqq0xrO4Vw-smeqQ</string>
    <string name="update_category">Редагування категорії</string>
    <string name="category_name">Назва категорії</string>
    <string name="edit_image">Змінити зображення</string>
    <string name="update_pizzeria">Редагування піцерії</string>
    <string name="pizzeria_name">Адреса піцерії</string>
    <string name="pizzeria_schedule_work">Час роботи піцерії</string>
    <string name="pizzeria_lat">Широта</string>
    <string name="pizzeria_lng">Довгота</string>
    <string name="coordinate">Координати</string>
    <string name="news_title">Заголовок новини</string>
    <string name="news_content">Зміст новини</string>
    <string name="vacancy_name">Назва вакансії</string>
    <string name="vacancy_short_desc">Короткий опис до вакансії</string>
    <string name="vacancy_desc">Повний опис вакансії</string>
    <string name="update_news">Редагування новини</string>
    <string name="update_vacancy">Редагування вакансії</string>
    <string name="vacancy_title">Робота у Pizza Dream це :</string>
    <string name="vacancy_container">1) фіксована погодинна ставка + бонус за кожну доставку + чайові;\n2) гнучкий графік роботи — ти складаєш самостійно;\n3) cтабільні виплати два рази в місяць;\n4) офіційне працевлаштування.\n</string>
    <string name="resumes">Список резюме</string>
    <string name="foods">Список страв</string>
    <string name="reviews_pizzeria">Відгуки до піцерій</string>
    <string name="sort">Показати спочатку</string>
    <string name="download_resume">Завантажити резюме</string>
    <string name="size">Розмір</string>
    <string name="addon">Додаткові складники</string>
    <string name="show_comment">Відгуки про товар</string>
    <string name="comments">Відгуки</string>
    <string name="update_food">Редагування страви</string>
    <string name="food_name">Назва страви</string>
    <string name="food_desc">Опис страви</string>
    <string name="addon_group">Набір додаткових інгредієнтів</string>
    <string name="price">Ціна, грн</string>
    <string name="name">Назва</string>
    <string name="add">Додати</string>
    <string name="edit">Змінити</string>
    <string name="empty_orders">У вас немає замовлень</string>
    <string name="go_to_menu_order">Перейдіть в меню, щоб оформити своє перше замовлення</string>
    <string name="btn_go_to_menu">Перейти в меню</string>
    <string name="addon_cart">Ви дозамовили:</string>
    <string name="add_comment">Додати відгук</string>
    <string name="delivery60">Доставка: 60грн.</string>
    <string name="order_status">Статус замовлення</string>
    <string name="order_details">Деталі замовлення</string>
    <string name="recipient">Отримувач</string>
    <string name="delivery">Доставка</string>
    <string name="list_food">Список товарів</string>
    <string name="payment">Оплата</string>
    <string name="goods_worth">Товарів на суму:</string>
    <string name="cost_delivery">Вартість доставки:</string>
    <string name="total">Разом</string>
    <string name="update_status">Змінити статус</string>
    <string name="ok">Так</string>
    <string name="check_update_status">Ви дійсно хочете змінити статус?</string>
    <string name="save_and_load_image">Завантажити зображення та зберегти</string>
    <string name="add_category">Додавання категорії</string>
    <string name="add_news">Додавання новини</string>
    <string name="add_vacancy">Додавання вакансії</string>
    <string name="add_food">Додавання страви</string>
    <string name="settings">Налаштування</string>
    <string name="filter">Фільтрація за статусом</string>
    <string-array name="sort_options">
        <item>популярні</item>
        <item>дешеві</item>
        <item>дорогі</item>
    </string-array>
</resources>