<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:layout_margin="8dp"
    android:orientation="vertical"
    tools:context=".ui.pizzerias.PizzeriasFragment">

    <RadioGroup
        android:id="@+id/radioGroup"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:gravity="center"
        android:orientation="horizontal">

        <RadioButton
            android:id="@+id/radioButtonList"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:background="@drawable/radio_button_no_circle"
            android:button="@drawable/radio_button_no_circle"
            android:checked="true"
            android:fontFamily="@font/montserrat"
            android:text="@string/list"
            android:textAlignment="center"
            android:textColor="@drawable/radio_button_text_color"
            android:textSize="20sp" />

        <RadioButton
            android:id="@+id/radioButtonMap"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:background="@drawable/radio_button_no_circle"
            android:button="@drawable/radio_button_no_circle"
            android:fontFamily="@font/montserrat"
            android:text="@string/map"
            android:textAlignment="center"
            android:textColor="@drawable/radio_button_text_color"
            android:textSize="20sp" />


    </RadioGroup>

    <com.google.android.gms.maps.MapView
        android:id="@+id/map_view"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:contentDescription="@string/app_name"
        android:visibility="gone" />

    <LinearLayout
        android:id="@+id/pizzeria_list"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical">

        <androidx.appcompat.widget.AppCompatButton
            android:id="@+id/create"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="end"
            android:height="27dp"
            android:background="@drawable/background_button_red_white"
            android:paddingHorizontal="9dp"
            android:text="@string/add"
            android:textColor="@color/red"
            android:textSize="18sp" />

        <androidx.recyclerview.widget.RecyclerView
            android:id="@+id/pizzeria_recycler"
            android:layout_width="match_parent"
            android:layout_height="match_parent" />
    </LinearLayout>
</LinearLayout>