<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_margin="8dp"
    android:orientation="vertical"
    tools:context=".ui.updatePizzeria.UpdatePizzeriaFragment">

    <com.google.android.material.textfield.TextInputLayout
        android:id="@+id/til_pizzeria_name"
        style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox"
        app:boxStrokeColor="@color/black"
        app:hintTextColor="@color/black"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginVertical="6dp"
        android:fontFamily="@font/montserrat">

        <com.google.android.material.textfield.TextInputEditText
            android:id="@+id/edt_pizzeria_name"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginBottom="8dp"
            android:fontFamily="@font/montserrat"
            android:hint="@string/pizzeria_name"
            android:inputType="textPersonName"
            android:textColor="@color/black"
            android:textSize="18sp" />
    </com.google.android.material.textfield.TextInputLayout>
    <com.google.android.material.textfield.TextInputLayout
        android:id="@+id/til_pizzeria_schedule_work"
        style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox"
        app:boxStrokeColor="@color/black"
        app:hintTextColor="@color/black"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginVertical="6dp"
        android:fontFamily="@font/montserrat">

        <com.google.android.material.textfield.TextInputEditText
            android:id="@+id/edt_pizzeria_schedule_work"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginBottom="8dp"
            android:fontFamily="@font/montserrat"
            android:hint="@string/pizzeria_schedule_work"
            android:textColor="@color/black"
            android:textSize="18sp" />
    </com.google.android.material.textfield.TextInputLayout>
    <TextView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:textSize="20sp"
        android:fontFamily="@font/montserrat_bold"
        android:textColor="@color/black"
        android:text="@string/coordinate"/>
    <com.google.android.material.textfield.TextInputLayout
        android:id="@+id/til_pizzeria_lat"
        style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox"
        app:boxStrokeColor="@color/black"
        app:hintTextColor="@color/black"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginVertical="6dp"
        android:fontFamily="@font/montserrat">

        <com.google.android.material.textfield.TextInputEditText
            android:id="@+id/edt_pizzeria_lat"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginBottom="8dp"
            android:fontFamily="@font/montserrat"
            android:hint="@string/pizzeria_lat"
            android:inputType="numberDecimal"
            android:textColor="@color/black"
            android:textSize="18sp" />
    </com.google.android.material.textfield.TextInputLayout>
    <com.google.android.material.textfield.TextInputLayout
        android:id="@+id/til_pizzeria_lng"
        style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox"
        app:boxStrokeColor="@color/black"
        app:hintTextColor="@color/black"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginVertical="6dp"
        android:fontFamily="@font/montserrat">

        <com.google.android.material.textfield.TextInputEditText
            android:id="@+id/edt_pizzeria_lng"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginBottom="8dp"
            android:fontFamily="@font/montserrat"
            android:hint="@string/pizzeria_lng"
            android:inputType="numberDecimal"
            android:textColor="@color/black"
            android:textSize="18sp" />
    </com.google.android.material.textfield.TextInputLayout>

    <com.google.android.material.button.MaterialButton
        android:id="@+id/save"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_alignParentBottom="true"
        android:height="27dp"
        android:backgroundTint="@color/red"
        android:text="@string/save"
        android:textColor="@color/white"
        android:textSize="20sp" />
</LinearLayout>