<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    android:padding="8dp"
    xmlns:app="http://schemas.android.com/apk/res-auto">
        <com.google.android.material.textfield.TextInputLayout
            android:id="@+id/til_email"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            app:boxBackgroundColor="@color/white"
            android:layout_marginBottom="20dp"
            app:boxStrokeColor="@color/black"
            app:hintTextColor="@color/black">
            <com.google.android.material.textfield.TextInputEditText
                android:id="@+id/edt_email"
                android:inputType="textEmailAddress"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:hint="@string/email"
                android:minHeight="48dp"/>
        </com.google.android.material.textfield.TextInputLayout>
    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginBottom="20dp"
        android:orientation="horizontal"
        android:weightSum="2">
        <com.google.android.material.button.MaterialButton
            android:id="@+id/dismissBtn"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:text="@string/cansel"
            android:layout_marginRight="5dp"
            android:textColor="@color/white"
            android:backgroundTint="@color/fui_bgMicrosoft"/>
        <com.google.android.material.button.MaterialButton
            android:id="@+id/sendEmailBtn"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:text="@string/send"
            android:layout_marginLeft = "5dp"
            android:textColor="@color/white"
            android:backgroundTint="@color/fui_bgEmail"/>
    </LinearLayout>
</LinearLayout>