<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    xmlns:tools="http://schemas.android.com/tools"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    tools:context=".ui.viewOrders.ViewOrdersFragment"
    android:padding="8dp">
    <androidx.recyclerview.widget.RecyclerView
        android:id="@+id/orders_recycler"
        android:visibility="gone"
        android:layout_width="match_parent"
        android:layout_height="match_parent"/>
    <LinearLayout
        android:id="@+id/empty_orders"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:visibility="gone"
        android:layout_centerInParent="true"
        android:gravity="center"
        android:orientation="vertical">
        <ImageView
            android:layout_width="128dp"
            android:layout_height="128dp"
            android:src="@drawable/smartphone" />
        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/empty_orders"
            android:fontFamily="@font/montserrat_bold"
            android:textAlignment="center"
            android:layout_margin="8dp"
            android:textColor="@color/black"
            android:textSize="35sp"/>
        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/go_to_menu_order"
            android:fontFamily="@font/montserrat"
            android:textColor="@color/black"
            android:textAlignment="center"
            android:textSize="15sp"/>
        <androidx.appcompat.widget.AppCompatButton
            android:id="@+id/btn_go_to_menu"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:background="@drawable/background_button_red_white"
            android:text="@string/btn_go_to_menu"
            android:textColor="@color/red"
            android:layout_margin="8dp"
            app:rippleColor="@color/ripple_effect"
            android:padding="6dp"
            android:textSize="21sp" />
    </LinearLayout>
</RelativeLayout>