<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    xmlns:tools="http://schemas.android.com/tools"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    tools:context=".ui.updateCategory.UpdateCategoryFragment"
    android:orientation="vertical"
    android:layout_margin="8dp">
    <ImageView
        android:id="@+id/img_category"
        android:scaleType="centerCrop"
        android:layout_width="98dp"
        android:layout_height="98dp"
        android:layout_gravity="center"/>
    <androidx.appcompat.widget.AppCompatButton
        android:id="@+id/edit_image"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="center"
        android:background="@color/fui_transparent"
        android:fontFamily="@font/montserrat_bold"
        android:text="@string/edit_image"
        android:textColor="@color/red"
        android:textSize="20sp" />
    <com.google.android.material.textfield.TextInputLayout
        android:id="@+id/til_category_name"
        style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginVertical="6dp"
        android:fontFamily="@font/montserrat"
        app:boxStrokeColor="@color/black"
        app:hintTextColor="@color/black">

        <com.google.android.material.textfield.TextInputEditText
            android:id="@+id/edt_category_name"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginBottom="8dp"
            android:fontFamily="@font/montserrat"
            android:hint="@string/category_name"
            android:inputType="textPersonName"
            android:textColor="@color/black"
            android:textSize="18sp" />
    </com.google.android.material.textfield.TextInputLayout>
    <com.google.android.material.button.MaterialButton
        android:id="@+id/save"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_alignParentBottom="true"
        android:height="27dp"
        android:backgroundTint="@color/red"
        android:text="@string/save"
        android:textColor="@color/white"
        android:textSize="20sp" />
</LinearLayout>